--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,3 +30,16 @@ Metrics/BlockLength:
 
 Metrics/MethodLength:
   Enabled: false  # não limita o tamanho de métodos
+
+  Layout/TrailingWhitespace:
+  Enabled: false
+
+Layout/TrailingEmptyLines:
+  Enabled: false
+
+Style/StringLiterals:
+  Enabled: false
+
+Layout/LeadingCommentSpace:
+  Enabled: false
+
