--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,3 +43,24 @@ Style/StringLiterals:
 Layout/LeadingCommentSpace:
   Enabled: false
 
+Layout/TrailingWhitespace:
+  Enabled: false
+
+Layout/TrailingEmptyLines:
+  Enabled: false
+
+Layout/LeadingCommentSpace:
+  Enabled: false
+
+Layout/SpaceInsideArrayLiteralBrackets:
+  Enabled: false
+
+Layout/EmptyLinesAroundClassBody:
+  Enabled: false
+
+Layout/EndAlignment:
+  Enabled: false
+
+Style/StringLiterals:
+  Enabled: false
+
