--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,36 +10,31 @@ AllCops:
 
 plugins:
   - rubocop-rails
+  - rubocop-rspec
+  - rubocop-capybara
+  - rubocop-factory_bot
+  - rubocop-rspec_rails
 
+# Desabilitações que você adicionou:
 Layout/LeadingCommentSpace:
   Enabled: false
-
 Style/StringLiterals:
   Enabled: false
-
 Layout/TrailingWhitespace:
   Enabled: false
-
 Layout/TrailingEmptyLines:
   Enabled: false
-
 Layout/SpaceInsideArrayLiteralBrackets:
   Enabled: false
-
 Style/FrozenStringLiteralComment:
   Enabled: false
-
 Style/Documentation:
   Enabled: false
-
 Metrics/BlockLength:
   Enabled: false
-
 Metrics/MethodLength:
   Enabled: false
-
 Layout/EmptyLinesAroundClassBody:
   Enabled: false
-
 Layout/EndAlignment:
   Enabled: false
